# nothing-linux

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  styles.css
nothing/: Cargo.toml
nothing/src/: anc.rs  connect.rs  lib.rs  nothing_ear_2.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
