[package]
name = "nothing-linux"
version = "0.0.1"
description = "nothing-linux"
authors = ["sn99"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nothing_linux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bluer = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

nothing = { path = "../nothing" }
